ghost/00-namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: ghostk3s
  argocd.argoproj.io/sync-wave: "0"
spec: {}
#---
# Optional: Limit the resources in the namespace
# 
# apiVersion: v1
# kind: ResourceQuota
# metadata:
#   name: ghostk3s-quota
#   namespace: ghostk3s
# spec:
#   hard:
#     limits.cpu: "2"
#     limits.memory: "4Gi"
#     requests.cpu: "0"
# #     requests.memory: "0"
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: default-deny
#   namespace: ghostk3s
# spec:
#   podSelector: {}
#   policyTypes:
#   - Ingress
#   - Egress
