ghost/04-mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-ghostk3s
  namespace: ghostk3s
  labels:
    app: mysql-ghostk3s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-ghostk3s
  template:
    metadata:
      labels:
        app: mysql-ghostk3s
      # annotations:
      #   container.apparmor.security.beta.kubernetes.io/mysql-ghostk3s: runtime/default
    spec:
      containers:
        - name: mysql-ghostk3s
          # securityContext:
          #   allowPrivilegeEscalation: false
            # capabilities:
            #   drop:
            #     - ALL
            #   add:
            #     - CHOWN
            #     - SETGID
            #     - SETUID
            #     - NET_BIND_SERVICE
                # - NET_RAW
            # privileged: false
            # readOnlyRootFilesystem: false # Todo: Unprivileged mysql container
            # runAsNonRoot: true
          image: mysql:8.2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 1000Mi
          #     cpu: "0"
          #   limits:
          #     memory: 1Gi
          #     cpu: 800m
          ports:
            - containerPort: 3306
              protocol: TCP
              name: mysqlgh
          volumeMounts:
            - name: mysql-ghostk3s-claim
              mountPath: /var/lib/mysql
              subPath: mysql-empty-dir
              
          
      # automountServiceAccountToken: false
      # securityContext:
      #   seccompProfile:
      #     type: RuntimeDefault
      volumes:
        - name: mysql-ghostk3s-claim
          persistentVolumeClaim:
            claimName: mysql-ghostk3s2
