ghost/05-ghost-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghostk3s
  namespace: ghostk3s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghostk3s
  template:
    metadata:
      namespace: ghostk3s
      labels:
        app: ghostk3s
    spec:
      volumes:
        - name: ghostk3s-static-ghost
          persistentVolumeClaim:
            claimName: ghostk3s-static-ghost2
        - name: ghost-config-prod
          secret:
            secretName: ghost-config-prod
            defaultMode: 420
        - name: tmp
          emptyDir:
            sizeLimit: 128Mi

      containers:
        - name: ghostk3s
          image: ghost:5-alpine
          ports:
            - name: ghk3s
              containerPort: 2368
              protocol: TCP
        
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 6
            httpGet:
              path: /ghost/api/v4/admin/site/
              port: ghk3s
              httpHeaders:
              - name: X-Forwarded-Proto
                value: https
              - name: Host
                value: blog.hensen.io
          livenessProbe:                        
            httpGet:
              path: /ghost/api/v4/admin/site/
              port: ghk3s
              httpHeaders:
              - name: X-Forwarded-Proto
                value: https
              - name: Host
                value: blog.hensen.io
            periodSeconds: 3600
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 2
          volumeMounts:
            - name: ghostk3s-static-ghost
              mountPath: /var/lib/ghost/content
            - name: ghost-config-prod
              readOnly: true
              mountPath: /var/lib/ghost/config.production.json
              subPath: config.production.json
            - name: tmp
              mountPath: /tmp
              readOnly: false
          imagePullPolicy: Always
          securityContext:
            # readOnlyRootFilesystem: true
            # allowPrivilegeEscalation: false
            # runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            fsGroup: 1000
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      # Optional: Uncomment the following to specify node selectors
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: static
      #               operator: In
      #               values:
      #                 - "true"
      

      # securityContext: {}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
      
  revisionHistoryLimit: 3
  progressDeadlineSeconds: 600
