ghost/03-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ghostk3s
  namespace: ghostk3s
  argocd.argoproj.io/sync-wave: "3"
  labels:
    app: ghostk3s
spec:
  ports:
    - port: 2368
      protocol: TCP
      targetPort: 2368
      name: ghk3s
  type: ClusterIP
  selector:
    app: ghostk3s


---
apiVersion: v1
kind: Service
metadata:
  name: mysql-ghostk3s
  namespace: ghostk3s
  labels:
    app: mysql-ghostk3s
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
      name: mysqlgh
  type: ClusterIP
  clusterIP: None
  selector:
    app: mysql-ghostk3s
