ghost/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghostk3s
  namespace: ghostk3s
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
    # traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik # or nginx, caddy, etc
  tls:
    - hosts:
        - blog.hensen.io
      # Optional:
      # - www.tests.yourdomain.com
      secretName: letsencrypt-production.key
  rules:
    - host: blog.hensen.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ghostk3s
                port:
                  name: ghk3s
  # Optional:
  # - host: www.tests.yourdomain.com
  #   http:
  #     paths:
  #     - path: /
  #       pathType: ImplementationSpecific
  #       backend:
  #         service:
  #           name: ghostk3s-svc
  #           port:
  #             name: ghk3s
